34_put_together/grade.txt
Grading at Sat Jul 27 19:33:49 UTC 2019
Attempting to compile:
rm -f  outname.o  counts.o  main.o  kv.o count_values *~
gcc -c -Wall -Werror -std=gnu99 -pedantic -ggdb3 outname.c
gcc -c -Wall -Werror -std=gnu99 -pedantic -ggdb3 counts.c
gcc -c -Wall -Werror -std=gnu99 -pedantic -ggdb3 main.c
gcc -c -Wall -Werror -std=gnu99 -pedantic -ggdb3 kv.c
kv.c: In function ‘readKVs’:
kv.c:42:5: error: expected ‘;’ before ‘}’ token
     }
     ^
Makefile:10: recipe for target 'kv.o' failed
make: *** [kv.o] Error 1
The code did not compile! Please try git add . to push all files in your working directory 

Overall Grade: F
